--- a/styles/style.css
+++ b/styles/style.css
@@ -1,43 +1,55 @@
 html {
   font-size: 10px;
-  font-family: 'Open Sans', sans-serif;
+  font-family:'Open Sans', sans-serif;
 }
-
 
 h1 {
+  font-family: 'Roboto';
+  font-weight: 900;
   font-size: 60px;
   text-align: center;
+  margin: 0;
+  padding: 20px 0;
+  color: #ffffff;
+  text-shadow: ;
 }
 
-p, li {
-  font-size: 16px;  
+p {
+  font-size: 16px;
   line-height: 2;
   letter-spacing: 1px;
 }
 
+ul{
+list-style: none;
+}
+
+li{
+font-size: 16px;
+font-weight: 900;
+line-height: 2;
+letter-spacing: 1px;
+}
 
 html {
-  background-color: #00539F;
+  background-color: #ffffff;
 }
 
 body {
-  width: 600px;
-  margin: 0 auto;
-  background-color: #FF9500;
-  padding: 0 20px 20px 20px;
-  border: 5px solid black;
+  width: 880px;
+  margin:40px;
+  background-color: #dddddd;
+  padding: 30px 30px 30px 30px;
+  border: 0.1px dotted gray;
+  border-radius: 5px;
 }
 
-h1 {
-  margin: 0;
-  padding: 20px 0;  
-  color: #00539F;
-  text-shadow: 3px 3px 1px black;
-}
 
 img {
   display: block;
   margin: 0 auto;
+  align-items:left;
+  padding: 30px;
 }
 
 /** L3: font  **/
@@ -50,9 +62,9 @@ p {
   3. rgb：rgb(50, 50, 50)
   4. rgba：rbga(50, 50, 50, 0.5);
   5. 其他不常見的：hsl, hsla
-  
+
   ps. 在 css 中，0.5 可以簡寫為 .5
-  
+
   https://developer.mozilla.org/en-US/docs/Web/CSS/color
   */
   /**
@@ -63,39 +75,38 @@ p {
    2. 字體檔名
    3. 字體種類：serif, sans-serif
    4. 系統預設：system-ui
-   
+
    https://developer.mozilla.org/en-US/docs/Web/CSS/font-family
   */
-  font-family: '微軟正黑體', 'Microsoft JhengHei', sans-serif;
-  
+  font-family: 'Open Sans', sans-serif;
+
   /**
   font-size: 字體大小
   定義是大寫 M 頂端到底端的長度
   數值可以是
   1. 絕對數值：18px
   2. 相對父層數值：1.5em, 150%
-  3. 相對根層數值：1.5rem
+  3. 相對根層數值：1.5rem (跟層：最上層>瀏覽器預設)
   */
   font-size: 18px;
-  
+
   /**
   font-weight: 字重
   數值可以是
   1. 數值：100 200 300 ... 900
   2. 關鍵字：lighter, normal, bold, bolder
   */
-  font-weight: bold;
-  
+
   /**
   font-style: 字體樣式
   可以是：
   1. normal;
   2. italic;
-  
+
   https://developer.mozilla.org/en-US/docs/Web/CSS/font-style
   */
-  font-style: italic;
-  
+  font-style:;/*obique*/
+
   /**
   line-height：行高
   每一行的高度
@@ -111,13 +122,15 @@ p {
 可自訂字型，將指定的字型檔，對應到樣式、字重
 */
 @font-face {
-  font-family: 'Noto Sans TC';
+  font-family:'Noto Sans TC';
   font-style: normal;
   font-weight: 400;
-  src: url(http://fonts.gstatic.com/ea/notosanstc/v1/NotoSansTC-Regular.woff2) format("woff2"), url(http://fonts.gstatic.com/ea/notosanstc/v1/NotoSansTC-Regular.woff) format("woff"), url(http://fonts.gstatic.com/ea/notosanstc/v1/NotoSansTC-Regular.otf) format("opentype"); 
+  src: url(http://fonts.gstatic.com/ea/notosanstc/v1/NotoSansTC-Regular.woff2) format("woff2"), url(http://fonts.gstatic.com/ea/notosanstc/v1/NotoSansTC-Regular.woff) format("woff"), url(http://fonts.gstatic.com/ea/notosanstc/v1/NotoSansTC-Regular.otf) format("opentype");
 }
 
 .special-font {
   font-family: 'Noto Sans TC';
-  font-size: 24px;
+  font-size: 9px;
+  font-weight: 100;
+  text-align: center;
 }
